# CrossRIEnet

./: .gitignore  README.md  model.py  pyproject.toml  requirements.txt  scratch_test.py  verification_script.py
ccc/: custom_layers.py  layers.py
crossrie/: custom_layers.py  layer.py
tests/: data_generator.py  test_api_misuse.py  test_crossrie.py  test_edge_cases.py  test_model.py  test_padding_leakage.py  test_serialization.py
utils/: __init__.py  custom_layers.py  helper_functions.py
